# WdP

./: main.c
.kdev4/: U.kdev4
A/: A.kdev4  CMakeLists.txt  liczby_pierwsze.txt  main.c
A/.kdev4/: A.kdev4
A/build_release/: CMakeCache.txt  Makefile  a  cmake_install.cmake
A/testy/: t00.in  t00.out  t01.tout
B/: B.kdev4  CMakeLists.txt  main.c
B/.kdev4/: B.kdev4
B/build_release/: CMakeCache.txt  Makefile  b  cmake_install.cmake
B/testy/: t00.in  t00.out  t00.tout
C/: C.kdev4  CMakeLists.txt  main.c
C/.kdev4/: C.kdev4
C/build_release/: CMakeCache.txt  Makefile  c  cmake_install.cmake
C/testy/: t00.in  t00.out
D/: CMakeLists.txt  D.kdev4  find.cxx  main.c  main.cxx
D/.kdev4/: D.kdev4
D/build_release/: CMakeCache.txt  Makefile  d  (+3 more)
E/: CMakeLists.txt  E.kdev4  find.cxx  main.c  main.cxx
E/.kdev4/: E.kdev4
E/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  e  find_test  wzor
E/testy/: .gen.in.kate-swp  gen.in  gen.tout  t00.in  t01.in
F/: CMakeLists.txt  F.kdev4  G.kdev4  find.cxx  main.c  main.cxx
G/: CMakeLists.txt  find.cxx  main.c  main.cxx
H/: CMakeLists.txt  H.kdev4  app.info  find.cxx  main.c  main.cxx
H/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  find_test  h  wzor
H/testy/: gen.in  gen.tout  t00.in  t00.tout
I/: CMakeLists.txt  I.kdev4  app.info  callgrind.out.24660  callgrind.out.24665  callgrind.out.3828  callgrind.out.3839  callgrind.out.3878  callgrind.out.3909  find.cxx  gmon.out  main.S  main.c
I/build_callgrind/: CMakeCache.txt  Makefile  cmake_install.cmake  find_test  i
I/build_coverage/: CMakeCache.txt  Makefile  cmake_install.cmake  find_test  i
I/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  find_test  i
I/testy/: gen.out  gen.tout  t00.in  t00.out  t00.tout
J/: CMakeLists.txt  J.kdev4  app.info  callgrind.out.5186  main.c  main2.c
K/: CMakeLists.txt  K.kdev4  main.c
L/: CMakeLists.txt  L.kdev4  main.c
L/.kdev4/: L.kdev4
L/testy/: t00.in  t00.out  t00.tout
M/: CMakeLists.txt  M.kdev4  main.c
M/.kdev4/: G.kdev4  J.kdev4  K.kdev4  M.kdev4
M/testy/: t00.in  t00.out  t01.in  t01.tout
N/: .directory  CMakeLists.txt  N.kdev4  main.c
O/: CMakeLists.txt  O.kdev4  main.c
P/: CMakeLists.txt  P.kdev4  main.c
Q/: CMakeLists.txt  Q.kdev4  main.c  main2.c
R/: CMakeLists.txt  R.kdev4  main.c
S/: CMakeLists.txt  S.kdev4  main.c
T/: CMakeLists.txt  T.kdev4  main.c
U/: CMakeLists.txt  U.kdev4  find.cxx  main.c
W/: CMakeLists.txt  W.kdev4  main.c
X/: CMakeLists.txt  X.kdev4  a.out  main.c
X/.kdev4/: X.kdev4
X/testy/: .t02.in.kate-swp  t00.in  t00.out  t00.tout  t01.tout  t02.in  t02.tout
Y/: CMakeLists.txt  Y.kdev4  main.c
alpha/: CMakeLists.txt  alpha.kdev4  main.c
beta/: CMakeLists.txt  a.out  beta.kdev4  main.c
testy/: t00.in  t00.out  t00.tout  t01.tout  t02.out  t02.out.p  t02.tout
(+118 files in other folders)
